# sirena

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile  Makefile.toml  README.md
.github/workflows/: ci.yml  rust.yml
benches/: bench.rs
cmsis_dsp_sys/: Cargo.toml  bindings.sh  build.rs  build.sh
cmsis_dsp_sys/src/: bindings.rs
examples/: Cargo.toml  sine.rs
examples/.cargo/: config.toml
examples/examples/: sine.rs
examples/src/: lib.rs
hack/: release.sh
modules/: Cargo.toml
modules/src/: comb_filter.rs  delay.rs  lib.rs  noise.rs  ring_buffer.rs  spectral_analysis.rs  state_variable_filter.rs
modules/src/wavetable_oscillator/: mod.rs  oscillator.rs  waveshapes.rs  wavetable.rs
pd/: Cargo.toml  README.md  cartesian.pd  osc1.pd  osc2.pd
pd/src/: all_pass_filter.rs  bitcrusher.rs  cartesian.rs  comb_filter.rs  counter.rs  delay.rs  lib.rs  numbers.rs  osc1.rs  osc2.rs  state_variable_filter.rs  time.rs  wavetable_oscillator.rs  wavetable_oscillator_2.rs  wavetable_oscillator_3.rs  wrapper.rs  xfade.rs
sirena/: Cargo.toml
sirena-modules/: Cargo.toml
sirena-modules/src/: generator.rs  lib.rs  oscillator.rs  sink.rs
sirena/src/: lib.rs
src/: all_pass_filter.rs  bitcrusher.rs  cartesian.rs  cmsis.rs  delay.rs  diff.rs  interpolation.rs  lib.rs  main.rs  memory_manager.rs  osc1.rs  osc2.rs  registration.rs  ring_buffer.rs  signal.rs  spectral_analysis.rs  state_variable_filter.rs  stream.rs  taper.rs  tone.rs  ui.rs  white_noise.rs  xfade.rs
src/filters/: all_pass_filter.rs  comb_filter.rs  ring_buffer.rs
src/modules/: adsr.rs  all_pass_filter.rs  bank.rs  comb_filter.rs  dac.rs  math.rs  midi.rs  mod.rs  scope.rs  value.rs  vco.rs
src/osc2/: breadth.rs  consts.rs  detune.rs  instrument.rs  mod.rs  pan.rs  wave.rs
src/signal/: clip_amp.rs  constant.rs  from_iterator.rs  mod.rs  mul_amp.rs  signal_trait.rs  sine.rs  take.rs
src/wavetable_oscillator/: circular_wavetable_oscillator.rs  consts.rs  double_wavetable_oscillator.rs  mod.rs  oscillator.rs  simple_wavetable_oscillator.rs  tests.rs  waveshapes.rs  wavetable.rs  xy0_wavetable_oscillator.rs
ui/: Cargo.toml
ui/src/: action.rs  main.rs  samples.rs  stream.rs
ui/src/filters/: mod.rs
ui/src/modules/: all_pass_filter.rs  comb_filter.rs  dac.rs  mod.rs  scope.rs  value.rs
