[package]
name = "sirena"
version = "0.0.1" # hack/release.sh
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Digital audio signal processing primitives."
repository = "https://github.com/zlosynth/sirena"
documentation = "https://docs.rs/sirena"
readme = "README.md"

[dependencies]
micromath = "1.1"

[dependencies.defmt]
version  = "0.3"
optional = true

[dev-dependencies]
rand = "0.8"
approx = "0.4"
criterion = "0.3"
heapless = "0.7"

[dev-dependencies.microfft]
version = "0.4"
default-features = false
features = ["maxn-1024"]

[features]
defmt = ["dep:defmt"]

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[profile.bench]
debug = true
lto = true
opt-level = 3
