[package]
name = "sirena"
version = "0.1.0"                                           # hack/release.sh
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Digital audio signal processing primitives."
repository = "https://github.com/zlosynth/sirena"
documentation = "https://docs.rs/sirena"
readme = "README.md"

[workspace]
members = ["cmsis_dsp_sys"]

[dependencies]
micromath = "1.1"
heapless = "0.7"
defmt = { version = "0.3", optional = true }
libm = "0.2"

[dependencies.microfft]
version = "0.5"
default-features = false
features = ["size-1024"]

[dev-dependencies]
rand = "0.8"
approx = "0.4"
criterion = "0.3"

[features]
defmt = ["dep:defmt"]

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[profile.bench]
debug = true
lto = true
opt-level = 3
