[package]
name = "examples"
version = "0.0.0"
edition = "2018"
authors = ["Petr Horáček <hrck@protonmail.com>"]
description = "Sirena examples"
repository = "https://github.com/zlosynth/sirena"
documentation = "https://docs.rs/sirena"
license = "GPL-3.0-or-later"
publish = false

[dev-dependencies]
sirena = { path = "../sirena" }
sirena-modules = { path = "../sirena-modules" }
graphity = "2.0"
cpal = "0.13"
