[package]
name = "sirena-examples"
version = "0.1.0"                                           # hack/release.sh
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"
repository = "https://github.com/zlosynth/sirena"
publish = false

[lib]
harness = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32h7xx-hal = { version = "0.12", features = ["stm32h750v", "rt", "revision_v",] }

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on flash
lto = true # better optimizations
opt-level = 3 # optimize for speed

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
