[package]
name = "sirena-modules"
version = "0.0.1"
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Sounds!"
repository = "https://github.com/zlosynth/sirena"
documentation = "https://docs.rs/sirena"
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
rustfft = "5.0"

[dev-dependencies]
approx = "0.4"
rand = "0.8"
